fixed overflow issue

--- a/find_classes_page/find_classes.css
+++ b/find_classes_page/find_classes.css
@@ -1,6 +1,6 @@
 html {
-  height: 100vh;
-  overflow: visible;
+  height: 100%;
+  overflow: hidden;
 }
 
 body {
